--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-184.5KB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇺🇸 美国-655.1KB/s(Youtube:不良林), server: 167.88.61.2, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 (已存活1天)中国-2.80MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-826.8KB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
-  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林) 2, server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: AFU5HtqSajyI}
-  - {name: 🇦🇺 澳大利亚-404.1KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇦🇺 澳大利亚-367.2KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-309.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇻🇳 越南-6.03MB/s(Youtube:不良林), server: 103.173.255.127, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-935.3KB/s(Youtube:不良林), server: 139.59.97.53, port: 443, type: trojan, password: 48b45c22-f05a-4eb8-a71a-efd4660cb4b9, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-313.7KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: AFU5HtqSajyI}
+  - {name: 🇦🇺 澳大利亚-1021.4KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇨🇳 中国-503.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-320.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-438.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.70MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇨🇳 中国-415.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-655.1KB/s(Youtube:不良林)
       - 🇨🇳 (已存活1天)中国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-826.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林) 2
-      - 🇦🇺 澳大利亚-404.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-367.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-935.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1021.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-655.1KB/s(Youtube:不良林)
       - 🇨🇳 (已存活1天)中国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-826.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林) 2
-      - 🇦🇺 澳大利亚-404.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-367.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-935.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1021.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-655.1KB/s(Youtube:不良林)
       - 🇨🇳 (已存活1天)中国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-826.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林) 2
-      - 🇦🇺 澳大利亚-404.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-367.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-935.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1021.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-655.1KB/s(Youtube:不良林)
       - 🇨🇳 (已存活1天)中国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-826.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林) 2
-      - 🇦🇺 澳大利亚-404.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-367.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-935.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1021.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-655.1KB/s(Youtube:不良林)
       - 🇨🇳 (已存活1天)中国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-826.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林) 2
-      - 🇦🇺 澳大利亚-404.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-367.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-935.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1021.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-655.1KB/s(Youtube:不良林)
       - 🇨🇳 (已存活1天)中国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-826.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林) 2
-      - 🇦🇺 澳大利亚-404.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-367.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-935.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1021.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-184.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-655.1KB/s(Youtube:不良林)
       - 🇨🇳 (已存活1天)中国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇺🇸 美国-826.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林) 2
-      - 🇦🇺 澳大利亚-404.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-367.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.7KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-935.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1021.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
