--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-655.1KB/s(Youtube:不良林), server: 167.88.61.2, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 (已存活1天)中国-2.80MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-313.7KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: AFU5HtqSajyI}
-  - {name: 🇦🇺 澳大利亚-1021.4KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇨🇳 中国-503.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-320.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-438.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-324.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 未知国家-6.59MB/s(Youtube:不良林), server: 103.186.187.52, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.70MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇨🇳 中国-415.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇸🇬 新加坡-1.29MB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: AFU5HtqSajyI}
+  - {name: 🇨🇳 中国-368.7KB/s(Youtube:不良林), server: 120.233.150.146, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 未知国家-966.8KB/s(Youtube:不良林), server: lu1.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3908b44d1be0a4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: lu1.gogogoo.cyou}}
+  - {name: 🇭🇰 香港-1.29MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 中国-353.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-349.0KB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65022, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-655.1KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1021.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.9KB/s(Youtube:不良林)
+      - 未知国家-6.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
+      - 未知国家-966.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-655.1KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1021.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.9KB/s(Youtube:不良林)
+      - 未知国家-6.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
+      - 未知国家-966.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-655.1KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1021.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.9KB/s(Youtube:不良林)
+      - 未知国家-6.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
+      - 未知国家-966.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-655.1KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1021.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.9KB/s(Youtube:不良林)
+      - 未知国家-6.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
+      - 未知国家-966.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-655.1KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1021.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.9KB/s(Youtube:不良林)
+      - 未知国家-6.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
+      - 未知国家-966.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-655.1KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1021.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.9KB/s(Youtube:不良林)
+      - 未知国家-6.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
+      - 未知国家-966.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-655.1KB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-2.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-313.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1021.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-503.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-438.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.9KB/s(Youtube:不良林)
+      - 未知国家-6.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
+      - 未知国家-966.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
