--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-324.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-438.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 未知国家-6.59MB/s(Youtube:不良林), server: 103.186.187.52, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.70MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇸🇬 新加坡-1.29MB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: AFU5HtqSajyI}
-  - {name: 🇨🇳 中国-368.7KB/s(Youtube:不良林), server: 120.233.150.146, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 未知国家-966.8KB/s(Youtube:不良林), server: lu1.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3908b44d1be0a4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: lu1.gogogoo.cyou}}
-  - {name: 🇭🇰 香港-1.29MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇺🇸 美国-369.0KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 43184, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-353.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-349.0KB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65022, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
+  - {name: 🇭🇰 (已存活4天)香港-3.92MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇳 中国-311.5KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-375.2KB/s(Youtube:不良林), server: 111.45.22.136, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-3.21MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20140, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-324.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.0KB/s(Youtube:不良林)
       - 未知国家-6.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
-      - 未知国家-966.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-369.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-353.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-375.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-324.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.0KB/s(Youtube:不良林)
       - 未知国家-6.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
-      - 未知国家-966.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-369.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-353.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-375.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-324.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.0KB/s(Youtube:不良林)
       - 未知国家-6.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
-      - 未知国家-966.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-369.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-353.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-375.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-3.92MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-324.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.0KB/s(Youtube:不良林)
       - 未知国家-6.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
-      - 未知国家-966.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-369.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-353.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-375.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-324.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.0KB/s(Youtube:不良林)
       - 未知国家-6.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
-      - 未知国家-966.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-369.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-353.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-375.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-324.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.0KB/s(Youtube:不良林)
       - 未知国家-6.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
-      - 未知国家-966.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-369.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-353.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-375.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-324.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.0KB/s(Youtube:不良林)
       - 未知国家-6.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
-      - 未知国家-966.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-369.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-353.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-349.0KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-311.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-375.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
